# mkdocs-simple-blog

./: .gitignore  LAST_VERSION  LICENSE  MANIFEST.in  README.md  _pyproject.toml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  search.html  setup.py  sitemap.xml
.code_quality/: .flake8  black.toml  isort.cfg  mypy.ini  ruff.toml
.github/: minify.json  minify.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  security-request.yml
.github/actions/build-package/: action.yml
.github/actions/commit-push/: action.yml
.github/actions/extract-version/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: auto-assign.yml  code-quality.yml  python-publish-pypi-test.yml  python-publish-pypi.yml  review-issue.yml  test.yml
assets/css/: grayscale-dark.min.css  main.css  media.css  media.min.css  mkdocstrings.css
assets/js/: main.js  theme.js
assets/stylesheets/: styles.css  theme.css
development/: index.html
docs/: development.md  getting-started.md  index.md  release-notes.md
docs/assets/: custom.js
docs/nav/: getting-started.md
docs/nav/setup/: fonts.md  (+5 more)
getting-started/: index.html
mkdocs_simple_blog/: __init__.py  base.html  mkdocs_theme.yml  search.html
mkdocs_simple_blog/css/: theme.css
mkdocs_simple_blog/modules/: content.html  copyright.html  dropdown-menu.html  footer.html  head_extra_links.html  header.html  menu.html  preview.html  search.html  searchbox.html  sidebar.html  source.html
nav/getting-started/: index.html
release-notes/: index.html
scripts/: install_local.py  sync_assets.py
search/: search_index.json
simple_blog/: __init__.py  base.html  nav.html  search.html
simple_blog/css/: theme.css
simple_blog/modules/: content.html  footer.html
template/: blog.html  index.html
template/css/: bootstrap.css  theme.css
template/js/: theme.js
tests/: README.md  __init__.py  conftest.py  test_assets.py  test_modules.py  test_package.py  test_templates.py  test_theme_config.py
(+67 files in other folders)
